cabal-version:       >=1.10
-- Initial package description 'while-programming-language.cabal' generated
--  by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                while-programming-language
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Lewis Robbins
maintainer:          lewis.robbins2+git@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable while-programming-language
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.14 && <4.15
  -- hs-source-dirs:
  default-language:    Haskell2010
